add unit tests for BotService